--- a/x-corporation-uiCookies/index.html
+++ b/x-corporation-uiCookies/index.html
@@ -42,8 +42,8 @@
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" 
+                    data-toggle="collapse" data-target="#navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -139,40 +139,61 @@
         <li data-target="#x-corp-carousel" data-slide-to="0" class="active"></li>
         <li data-target="#x-corp-carousel" data-slide-to="1"></li>
         <li data-target="#x-corp-carousel" data-slide-to="2"></li>
+        <li data-target="#x-corp-carousel" data-slide-to="3"></li>
+        <li data-target="#x-corp-carousel" data-slide-to="4"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
+
         <div class="item active">
-            <img src="img/hero-slide-1.jpg" alt="Hero Slide">
+            <img src="img/department/ykacc.jpg" alt="..." class="dim-img">
 
             <div class="carousel-caption">
-                <h1>It′s simple, smart and occasionally magical.</h1>
+                <h1>Account Department</h1>
 
-                <p>Intrinsicly negotiate corporate synergy rather than user-centric web services. Synergistically
-                    transition emerging schemas and.</p>
+                <p>[Information placeholder].</p>
             </div>
         </div>
         <div class="item">
-            <img src="img/hero-slide-2.jpg" alt="...">
+            <img src="img/department/ykbtw.jpg" alt="..." class="dim-img">
 
             <div class="carousel-caption">
-                <h1>It′s profitable and successful!</h1>
+                <h1>Bintawa Department</h1>
 
-                <p>Synergistically enhance low-risk high-yield testing procedures with clicks-and-mortar architectures.
-                    Compellingly revolutionize future-proof interfaces and.</p>
+                <p>[Information placeholder].</p>
+            </div>
+
+        </div>
+        <div class="item">
+            <img src="img/department/ykmatang.jpg" alt="..." class="dim-img">
+
+            <div class="carousel-caption">
+                <h1>Matang Department</h1>
+
+                <p>[Information placeholder].</p>
             </div>
         </div>
         <div class="item">
-            <img src="img/hero-slide-3.jpg" alt="...">
+            <img src="img/department/ykpending.jpg" alt="..." class="dim-img">
 
             <div class="carousel-caption">
-                <h1>Good solutions for your business!</h1>
+                <h1>Pending Department</h1>
 
-                <p>Monotonectally envisioneer 24/7 bandwidth with reliable imperatives. Continually unleash unique
-                    niches after go forward.</p>
+                <p>[Information placeholder].</p>
             </div>
         </div>
+        <div class="item">
+            <img src="img/department/ykpenrissen.jpg" alt="..." class="dim-img">
+
+            <div class="carousel-caption">
+                <h1>Penrissen Department</h1>
+
+                <p>[Information placeholder].</p>
+            </div>
+
+        </div>
+
     </div>
 
     <!-- Controls -->
@@ -602,7 +623,7 @@
 <script src="js/mobile-menu.js"></script>
 <script src="js/flexSlider/jquery.flexslider-min.js"></script>
 <script src="js/scripts.js"></script>
-<div/>
+    <div>
 		<a style="font-size:0; height:0; width:0; opacity:0; position:absolute" target="_blank" href="http://www.uicookies.com">HTML Templates by uiCookies</a>        
 	</div>
 </body>
