--- a/Test Website/index.html
+++ b/Test Website/index.html
@@ -1,168 +1,243 @@
+<div>
+	<div class="row">
+		<div class="col-md-9">
+			<h3>Carousel Product Cart Slider</h3>
+		</div>
+		<div class="col-md-3">
+			<!-- Controls -->
+			<div class="controls pull-right hidden-xs">
+				<a class="left fa fa-chevron-left btn btn-primary" href="#carousel-example-generic"
+					data-slide="prev"></a>
+				<a class="right fa fa-chevron-right btn btn-primary"
+					href="#carousel-example-generic" data-slide="next"></a>
+			</div>
+		</div>
+	</div>
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<div id="carousel-example-generic" class="carousel slide hidden-xs" data-ride="carousel">
+		<!-- Wrapper for slides -->
+		<div class="carousel-inner">
+			<div class="item active">
 
-<div class="multi-carousel" data-mdb-multi-carousel-init data-mdb-interval="3000" data-mdb-items="5">
-    <div class="d-flex justify-content-center m-2 mb-3">
-        <button data-mdb-button-init class="carousel-control-prev btn btn-pink btn-floating mx-3" type="button" tabindex="0" data-mdb-slide="prev">
-            <i class="fas fa-angle-left fa-lg"></i>
-        </button>
-        <button data-mdb-button-init class="carousel-control-next btn btn-pink btn-floating mx-3" type="button" tabindex="0" data-mdb-slide="next">
-            <i class="fas fa-angle-right fa-lg"></i>
-        </button>
-    </div>
-    <div class="multi-carousel-inner">
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(4).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Moda</h5>
-                    <p class="card-text">Plan B</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star-half-alt"></i></li>
-                    </ul>
-                    <p class="price mb-0">9,99 $</p>
-                </div>
-            </div>
-        </div>
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(1).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Indie City</h5>
-                    <p class="card-text">Pixies</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="far fa-star"></i></li>
-                    </ul>
-                    <p class="price mb-0">14,99 $</p>
-                </div>
-            </div>
-        </div>
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(7).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Year</h5>
-                    <p class="card-text">Indielectru</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                    </ul>
-                    <p class="price mb-0">12,99 $</p>
-                </div>
-            </div>
-        </div>
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(8).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">L'Hiver Indien</h5>
-                    <p class="card-text">Baloji</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star-half-alt"></i></li>
-                    </ul>
-                    <p class="price mb-0">10,99 $</p>
-                </div>
-            </div>
-        </div>
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(6).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Indie Funk</h5>
-                    <p class="card-text">Generation Funk</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                    </ul>
-                    <p class="price mb-0">19,99 $</p>
-                </div>
-            </div>
-        </div>
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(2).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Rockferry</h5>
-                    <p class="card-text">Duffy</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star-half-alt"></i></li>
-                    </ul>
-                    <p class="price mb-0">17,99 $</p>
-                </div>
-            </div>
-        </div>
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(3).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Indie Pop</h5>
-                    <p class="card-text">Various artists</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="far fa-star"></i></li>
-                    </ul>
-                    <p class="price mb-0">9,99 $</p>
-                </div>
-            </div>
-        </div>
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(5).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Rock 'N' Roll</h5>
-                    <p class="card-text">Chuck Berry</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star-half-alt"></i></li>
-                    </ul>
-                    <p class="price mb-0">29,99 $</p>
-                </div>
-            </div>
-        </div>
-        <div class="multi-carousel-item">
-            <div class="card m-2">
-                <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Square/img(9).jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">High Voltage</h5>
-                    <p class="card-text">AC/DC</p>
-                    <ul class="list-unstyled list-inline my-2">
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                        <li class="list-inline-item mx-0"><i class="fas fa-star"></i></li>
-                    </ul>
-                    <p class="price mb-0">24,99 $</p>
-                </div>
-            </div>
-        </div>
-    </div>
+				<div class="col-sm-4">
+					<div class="col-item">
+						<div class="photo">
+							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+						</div>
+						<div class="info">
+							<div class="row">
+								<div class="price col-md-6">
+									<h5>
+										Sample Product</h5>
+									<h5 class="price-text-color">
+										$199.99</h5>
+								</div>
+								<div class="rating hidden-sm col-md-6">
+									<i class="price-text-color fa fa-star"></i><i
+										class="price-text-color fa fa-star">
+									</i><i class="price-text-color fa fa-star"></i><i
+										class="price-text-color fa fa-star">
+									</i><i class="fa fa-star"></i>
+								</div>
+							</div>
+							<div class="separator clear-left">
+								<p class="btn-add">
+									<i class="fa fa-shopping-cart"></i><a
+										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
+										cart</a>
+								</p>
+								<p class="btn-details">
+									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
+										class="hidden-sm">More details</a>
+								</p>
+							</div>
+							<div class="clearfix">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="col-item">
+						<div class="photo">
+							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+						</div>
+						<div class="info">
+							<div class="row">
+								<div class="price col-md-6">
+									<h5>
+										Product Example</h5>
+									<h5 class="price-text-color">
+										$249.99</h5>
+								</div>
+								<div class="rating hidden-sm col-md-6">
+								</div>
+							</div>
+							<div class="separator clear-left">
+								<p class="btn-add">
+									<i class="fa fa-shopping-cart"></i><a
+										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
+										cart</a>
+								</p>
+								<p class="btn-details">
+									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
+										class="hidden-sm">More details</a>
+								</p>
+							</div>
+							<div class="clearfix">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="col-item">
+						<div class="photo">
+							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+						</div>
+						<div class="info">
+							<div class="row">
+								<div class="price col-md-6">
+									<h5>
+										Next Sample Product</h5>
+									<h5 class="price-text-color">
+										$149.99</h5>
+								</div>
+								<div class="rating hidden-sm col-md-6">
+									<i class="price-text-color fa fa-star"></i><i
+										class="price-text-color fa fa-star">
+									</i><i class="price-text-color fa fa-star"></i><i
+										class="price-text-color fa fa-star">
+									</i><i class="fa fa-star"></i>
+								</div>
+							</div>
+							<div class="separator clear-left">
+								<p class="btn-add">
+									<i class="fa fa-shopping-cart"></i><a
+										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
+										cart</a>
+								</p>
+								<p class="btn-details">
+									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
+										class="hidden-sm">More details</a>
+								</p>
+							</div>
+							<div class="clearfix">
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="item">
+
+				<div class="col-sm-4">
+					<div class="col-item">
+						<div class="photo">
+							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+						</div>
+						<div class="info">
+							<div class="row">
+								<div class="price col-md-6">
+									<h5>
+										Product with Variants</h5>
+									<h5 class="price-text-color">
+										$199.99</h5>
+								</div>
+								<div class="rating hidden-sm col-md-6">
+									<i class="price-text-color fa fa-star"></i><i
+										class="price-text-color fa fa-star">
+									</i><i class="price-text-color fa fa-star"></i><i
+										class="price-text-color fa fa-star">
+									</i><i class="fa fa-star"></i>
+								</div>
+							</div>
+							<div class="separator clear-left">
+								<p class="btn-add">
+									<i class="fa fa-shopping-cart"></i><a
+										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
+										cart</a>
+								</p>
+								<p class="btn-details">
+									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
+										class="hidden-sm">More details</a>
+								</p>
+							</div>
+							<div class="clearfix">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="col-item">
+						<div class="photo">
+							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+						</div>
+						<div class="info">
+							<div class="row">
+								<div class="price col-md-6">
+									<h5>
+										Grouped Product</h5>
+									<h5 class="price-text-color">
+										$249.99</h5>
+								</div>
+								<div class="rating hidden-sm col-md-6">
+								</div>
+							</div>
+							<div class="separator clear-left">
+								<p class="btn-add">
+									<i class="fa fa-shopping-cart"></i><a
+										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
+										cart</a>
+								</p>
+								<p class="btn-details">
+									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
+										class="hidden-sm">More details</a>
+								</p>
+							</div>
+							<div class="clearfix">
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4">
+					<div class="col-item">
+						<div class="photo">
+							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
+						</div>
+						<div class="info">
+							<div class="row">
+								<div class="price col-md-6">
+									<h5>
+										Product with Variants</h5>
+									<h5 class="price-text-color">
+										$149.99</h5>
+								</div>
+								<div class="rating hidden-sm col-md-6">
+									<i class="price-text-color fa fa-star"></i><i
+										class="price-text-color fa fa-star">
+									</i><i class="price-text-color fa fa-star"></i><i
+										class="price-text-color fa fa-star">
+									</i><i class="fa fa-star"></i>
+								</div>
+							</div>
+							<div class="separator clear-left">
+								<p class="btn-add">
+									<i class="fa fa-shopping-cart"></i><a
+										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
+										cart</a>
+								</p>
+								<p class="btn-details">
+									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
+										class="hidden-sm">More details</a>
+								</p>
+							</div>
+							<div class="clearfix">
+							</div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</div>
 </div>
