--- a/Test Website/index.html
+++ b/Test Website/index.html
@@ -1,243 +1,74 @@
-<div>
-	<div class="row">
-		<div class="col-md-9">
-			<h3>Carousel Product Cart Slider</h3>
-		</div>
-		<div class="col-md-3">
-			<!-- Controls -->
-			<div class="controls pull-right hidden-xs">
-				<a class="left fa fa-chevron-left btn btn-primary" href="#carousel-example-generic"
-					data-slide="prev"></a>
-				<a class="right fa fa-chevron-right btn btn-primary"
-					href="#carousel-example-generic" data-slide="next"></a>
+<link rel="stylesheet" href="style.css">
+
+<main>
+	<div class="container-fluid bg-trasparent my-4 p-3" style="position: relative;">
+		<div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+			<div class="col">
+				<div class="card h-100 shadow-sm"> <img
+						src="https://www.freepnglogos.com/uploads/notebook-png/download-laptop-notebook-png-image-png-image-pngimg-2.png"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<div class="clearfix mb-3"> <span class="float-start badge rounded-pill bg-primary">ASUS
+								Rog</span> <span class="float-end price-hp">12354.00&euro;</span> </div>
+						<h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem
+							eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe,
+							iste optio laudantium sed aliquam sequi.</h5>
+						<div class="text-center my-4"> <a href="#" class="btn btn-warning">Check offer</a> </div>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100 shadow-sm"> <img
+						src="https://www.freepnglogos.com/uploads/notebook-png/notebook-laptop-png-images-you-can-download-mashtrelo-14.png"
+						class="card-img-top" alt="...">
+					<div class="card-body">
+						<div class="clearfix mb-3"> <span
+								class="float-start badge rounded-pill bg-success">12354.00&euro;</span> <span
+								class="float-end"><a href="#">Example</a></span> </div>
+						<h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem
+							eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe,
+							iste optio laudantium sed aliquam sequi.</h5>
+						<div class="d-grid gap-2 my-4"> <a href="#" class="btn btn-warning">Check offer</a> </div>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100 shadow-sm"> <img
+						src="https://www.freepnglogos.com/uploads/notebook-png/download-laptop-notebook-png-image-png-image-pngimg-2.png"
+						class="card-img-top" alt="...">
+					<div class="label-top shadow-sm">Asus Rog</div>
+					<div class="card-body">
+						<div class="clearfix mb-3"> <span
+								class="float-start badge rounded-pill bg-success">12354.00&euro;</span> <span
+								class="float-end"><a href="#" class="small text-muted">Reviews</a></span> </div>
+						<h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem
+							eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe,
+							iste optio laudantium sed aliquam sequi.</h5>
+						<div class="text-center my-4"> <a href="#" class="btn btn-warning">Check offer</a> </div>
+						<div class="clearfix mb-1"> <span class="float-start"><i
+									class="far fa-question-circle"></i></span> <span class="float-end"><i
+									class="fas fa-plus"></i></span> </div>
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div class="card h-100 shadow-sm"> <img
+						src="https://www.freepnglogos.com/uploads/notebook-png/notebook-laptop-png-images-you-can-download-mashtrelo-14.png"
+						class="card-img-top" alt="...">
+					<div class="label-top shadow-sm">DELL</div>
+					<div class="card-body">
+						<div class="clearfix mb-3"> <span class="float-start price-hp">12354.00&euro;</span> <span
+								class="float-end"><a class="text-muted small" href="#">Reviews</a></span> </div>
+						<h5 class="card-title">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam quidem
+							eaque ut eveniet aut quis rerum. Asperiores accusamus harum ducimus velit odit ut. Saepe,
+							iste optio laudantium sed aliquam sequi.</h5>
+						<div class="text-center my-4"> <a href="#" class="btn btn-warning">Check offer</a> </div>
+						<div class="clearfix mb-1"> <span class="float-start"><i
+									class="far fa-question-circle"></i></span> <span class="float-end"><i
+									class="fas fa-plus"></i></span> </div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-
-	<div id="carousel-example-generic" class="carousel slide hidden-xs" data-ride="carousel">
-		<!-- Wrapper for slides -->
-		<div class="carousel-inner">
-			<div class="item active">
-
-				<div class="col-sm-4">
-					<div class="col-item">
-						<div class="photo">
-							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
-						</div>
-						<div class="info">
-							<div class="row">
-								<div class="price col-md-6">
-									<h5>
-										Sample Product</h5>
-									<h5 class="price-text-color">
-										$199.99</h5>
-								</div>
-								<div class="rating hidden-sm col-md-6">
-									<i class="price-text-color fa fa-star"></i><i
-										class="price-text-color fa fa-star">
-									</i><i class="price-text-color fa fa-star"></i><i
-										class="price-text-color fa fa-star">
-									</i><i class="fa fa-star"></i>
-								</div>
-							</div>
-							<div class="separator clear-left">
-								<p class="btn-add">
-									<i class="fa fa-shopping-cart"></i><a
-										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
-										cart</a>
-								</p>
-								<p class="btn-details">
-									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
-										class="hidden-sm">More details</a>
-								</p>
-							</div>
-							<div class="clearfix">
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="col-item">
-						<div class="photo">
-							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
-						</div>
-						<div class="info">
-							<div class="row">
-								<div class="price col-md-6">
-									<h5>
-										Product Example</h5>
-									<h5 class="price-text-color">
-										$249.99</h5>
-								</div>
-								<div class="rating hidden-sm col-md-6">
-								</div>
-							</div>
-							<div class="separator clear-left">
-								<p class="btn-add">
-									<i class="fa fa-shopping-cart"></i><a
-										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
-										cart</a>
-								</p>
-								<p class="btn-details">
-									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
-										class="hidden-sm">More details</a>
-								</p>
-							</div>
-							<div class="clearfix">
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="col-item">
-						<div class="photo">
-							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
-						</div>
-						<div class="info">
-							<div class="row">
-								<div class="price col-md-6">
-									<h5>
-										Next Sample Product</h5>
-									<h5 class="price-text-color">
-										$149.99</h5>
-								</div>
-								<div class="rating hidden-sm col-md-6">
-									<i class="price-text-color fa fa-star"></i><i
-										class="price-text-color fa fa-star">
-									</i><i class="price-text-color fa fa-star"></i><i
-										class="price-text-color fa fa-star">
-									</i><i class="fa fa-star"></i>
-								</div>
-							</div>
-							<div class="separator clear-left">
-								<p class="btn-add">
-									<i class="fa fa-shopping-cart"></i><a
-										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
-										cart</a>
-								</p>
-								<p class="btn-details">
-									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
-										class="hidden-sm">More details</a>
-								</p>
-							</div>
-							<div class="clearfix">
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-
-			<div class="item">
-
-				<div class="col-sm-4">
-					<div class="col-item">
-						<div class="photo">
-							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
-						</div>
-						<div class="info">
-							<div class="row">
-								<div class="price col-md-6">
-									<h5>
-										Product with Variants</h5>
-									<h5 class="price-text-color">
-										$199.99</h5>
-								</div>
-								<div class="rating hidden-sm col-md-6">
-									<i class="price-text-color fa fa-star"></i><i
-										class="price-text-color fa fa-star">
-									</i><i class="price-text-color fa fa-star"></i><i
-										class="price-text-color fa fa-star">
-									</i><i class="fa fa-star"></i>
-								</div>
-							</div>
-							<div class="separator clear-left">
-								<p class="btn-add">
-									<i class="fa fa-shopping-cart"></i><a
-										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
-										cart</a>
-								</p>
-								<p class="btn-details">
-									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
-										class="hidden-sm">More details</a>
-								</p>
-							</div>
-							<div class="clearfix">
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="col-item">
-						<div class="photo">
-							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
-						</div>
-						<div class="info">
-							<div class="row">
-								<div class="price col-md-6">
-									<h5>
-										Grouped Product</h5>
-									<h5 class="price-text-color">
-										$249.99</h5>
-								</div>
-								<div class="rating hidden-sm col-md-6">
-								</div>
-							</div>
-							<div class="separator clear-left">
-								<p class="btn-add">
-									<i class="fa fa-shopping-cart"></i><a
-										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
-										cart</a>
-								</p>
-								<p class="btn-details">
-									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
-										class="hidden-sm">More details</a>
-								</p>
-							</div>
-							<div class="clearfix">
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="col-item">
-						<div class="photo">
-							<img src="http://placehold.it/350x260" class="img-responsive" alt="a" />
-						</div>
-						<div class="info">
-							<div class="row">
-								<div class="price col-md-6">
-									<h5>
-										Product with Variants</h5>
-									<h5 class="price-text-color">
-										$149.99</h5>
-								</div>
-								<div class="rating hidden-sm col-md-6">
-									<i class="price-text-color fa fa-star"></i><i
-										class="price-text-color fa fa-star">
-									</i><i class="price-text-color fa fa-star"></i><i
-										class="price-text-color fa fa-star">
-									</i><i class="fa fa-star"></i>
-								</div>
-							</div>
-							<div class="separator clear-left">
-								<p class="btn-add">
-									<i class="fa fa-shopping-cart"></i><a
-										href="http://www.jquery2dotnet.com" class="hidden-sm">Add to
-										cart</a>
-								</p>
-								<p class="btn-details">
-									<i class="fa fa-list"></i><a href="http://www.jquery2dotnet.com"
-										class="hidden-sm">More details</a>
-								</p>
-							</div>
-							<div class="clearfix">
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-</div>
+</main>
