update product navbar

--- a/Template-x-corporation-uiCookies/about.html
+++ b/Template-x-corporation-uiCookies/about.html
@@ -91,7 +91,7 @@
                                 <ul class="col-sm-3">
                                     <li class="dropdown-header">Widget Haeder</li>
                                     <li><a href="#">Awesome Features</a></li>
-                                    <li><a href="#">Clean Interface</a></li>
+									<li><a href="#">Clean Interface</a></li>
                                     <li><a href="#">Available Possibilities</a></li>
                                     <li><a href="#">Responsive Design</a></li>
                                     <li><a href="#">Pixel Perfect Graphics</a></li>
@@ -120,6 +120,16 @@
                                     <li><a href="#">Responsive Design</a></li>
                                     <li><a href="#">Pixel Perfect Graphics</a></li>
                                 </ul>
+                                <ul class="col-sm-3">
+                                    <li class="dropdown-header">Widget Haeder</li>
+                                    <li><a href="#">Awesome Features</a></li>
+                                    <li><a href="#">Clean Interface</a></li>
+                                    <li><a href="#">Available Possibilities</a></li>
+                                    <li><a href="#">Responsive Design</a></li>
+                                    <li><a href="#">Pixel Perfect Graphics</a></li>
+                                </ul>
+
+
                             </div>
                         </li>
                     </ul>
